--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <main>
         <section class="hero">
-            <img src="images/hero-image.jpg" alt="Hero Image">
+            <img src="image1.png" alt="Hero Image">
             <h2>Welcome to my online store!</h2>
             <p>Find a wide variety of products here.</p>
             <a href="products.html" class="btn">Browse Products</a>
@@ -33,19 +33,19 @@
         <section class="products">
             <h2>Featured Products</h2>
             <div class="product-card">
-                <img src="images/product1.jpg" alt="Product 1">
+                <img src="image2.png" alt=>
                 <h3>Product 1</h3>
                 <p>Description of Product 1.</p>
                 <a href="#" class="btn">Buy Now</a>
             </div>
             <div class="product-card">
-                <img src="images/product2.jpg" alt="Product 2">
+                <img src="image3.png" alt=>
                 <h3>Product 2</h3>
                 <p>Description of Product 2.</p>
                 <a href="#" class="btn">Buy Now</a>
             </div>
             <div class="product-card">
-                <img src="images/product3.jpg" alt="Product 3">
+                <img src="image4.png" alt=>
                 <h3>Product 3</h3>
                 <p>Description of Product 3.</p>
                 <a href="#" class="btn">Buy Now</a>
