--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <main>
         <section class="hero">
-            <img src="image1.png" alt="Hero Image">
+            <img src="image1.png" alt=>
             <h2>Welcome to my online store!</h2>
             <p>Find a wide variety of products here.</p>
             <a href="products.html" class="btn">Browse Products</a>
@@ -54,7 +54,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Shah Shah Sharforaz Hossain</p>
+        <p>&copy; Shah Shah Sharforaz Hossain (2020410)</p>
     </footer>
 </body>
 </html>
