--- a/products.html
+++ b/products.html
@@ -64,7 +64,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Shah Shah Sharforaz Hossain</p>
+        <p>&copy; Shah Shah Sharforaz Hossain (2020410)</p>
     </footer>
 </body>
 </html>
